--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.21",
+    "@iconify/vue": "^5.0.0",
+    "element-plus": "^2.11.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-i18n": "^11.1.11",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/unjs": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.12",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "less": "^4.4.1",
     "tailwindcss": "^4.1.12",
     "typescript": "~5.8.3",
+    "unplugin-icons": "^22.2.0",
+    "unplugin-vue-components": "^29.0.0",
     "vite": "^7.1.2",
     "vue-tsc": "^3.0.5"
   }
