--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@iconify/vue": "^5.0.0",
+    "clsx": "^2.1.1",
     "element-plus": "^2.11.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
