--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "element-plus": "^2.11.1",
     "pinia": "^3.0.3",
+    "screenfull": "^6.0.2",
     "vue": "^3.5.18",
     "vue-i18n": "^11.1.11",
     "vue-router": "^4.5.1"
